--- a/rootdir/etc/init.universal5420.rc
+++ b/rootdir/etc/init.universal5420.rc
@@ -3,7 +3,7 @@ import init.samsung.rc
 import init.universal5420.wifi.rc
 
 on init
-    export LD_SHIM_LIBS "/system/lib/libexynoscamera.so|libsamsung_symbols.so"
+    export LD_SHIM_LIBS "/system/bin/gpsd|libdmitry.so"
 
     # Support legacy paths
     symlink /sdcard /storage/sdcard0
